# icg15-bhl

./: .gitignore  CMakeLists.txt  README.md  archlinux-FindGLFW2.patch  readme.txt
hw2p1_spiral/: Triangle.h  hw2p1_spiral  hw2p1_sunflower  main.cpp  triangle_fshader.glsl  triangle_vshader.glsl
hw2p2_checkerboard/: Quad.h  hw2p2_checkerboard  main.cpp  quad_fshader.glsl  quad_vshader.glsl
hw2p3_planets/: Quad.h  hw2p3_planets  main.cpp  quad_fshader.glsl  quad_vshader.glsl
hw3_trackball/: hw3_trackball  main.cpp  trackball.h
hw3_trackball/_grid/: grid.h  grid_vshader.glsl
hw4_shading/: art_vshader.glsl  flat_fshader.glsl  gouraud_fshader.glsl  gouraud_vshader.glsl  hw4_shading  main.cpp  phong_vshader.glsl  spot_fshader.glsl
hw4_shading/_mesh/: Mesh.h  art_fshader.glsl  art_vshader.glsl  flat_fshader.glsl  flat_vshader.glsl  gouraud_fshader.glsl  gouraud_vshader.glsl  phong_fshader.glsl  phong_vshader.glsl  spot_fshader.glsl  spot_vshader.glsl  toon_fshader.glsl  toon_vshader.glsl
hw4_shading/_quad/: Quad.h
hw5_bezier/: CMakeLists.txt  hw5_bezier  main.cpp  point_selection_fshader.glsl  trackball.h
hw5_bezier/_bezier/: bezier.h
hw5_bezier/_mesh/: Mesh.h  phong_fshader.glsl  phong_vshader.glsl
hw6p1_fastsmooth/: FrameBuffer.h  hw6p1_fastsmooth  main.cpp
hw6p1_fastsmooth/_screenquad/: ScreenQuad.h  ScreenQuad_fshader.glsl
hw6p2_mirrorfloor/: hw6p2_mirrorfloor  main.cpp
hw6p2_mirrorfloor/_floor/: Floor_fshader.glsl
hw6p3_motionblur/: FrameBuffer_fshader.glsl  Wheel_fshader.glsl  hw6p3_motionblur
lab10_atmfx/: CMakeLists.txt  main.cpp  quad.h  quad_fshader.glsl  quad_vshader.glsl
lab4_gouraud_solution/: gouraud_fshader.glsl  gouraud_vshader.glsl
lab5_bezier/: main.cpp
lab5_bezier/_bezier/: bezier.h
lab5_bezier_SOLUTION/: main.cpp
lab5_bezier_SOLUTION/_bezier/: bezier.h
lab6_framebuffer/: FrameBuffer.h  lab6_framebuffer  main.cpp
lab6_framebuffer/_screenquad/: ScreenQuad.h  ScreenQuad_fshader.glsl
lab9_shadow_maps/: CMakeLists.txt  Makefile  ShadowBuffer.h  fshader.glsl  main.cpp  shadow_map_fshader.glsl  shadow_map_vshader.glsl  vshader.glsl
lab9_shadow_maps/_floor/: Floor.h
lab9_shadow_maps/_tangle_cube/: TangleCube.h
