get_filename_component(EXERCISENAME ${CMAKE_CURRENT_LIST_DIR} NAME)
file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SHADERS "*.glsl")
add_executable(${EXERCISENAME} ${SOURCES} ${HEADERS} ${SHADERS})
target_link_libraries(${EXERCISENAME} ${COMMON_LIBS})

target_deploy_file(${EXERCISENAME} vshader.glsl)
target_deploy_file(${EXERCISENAME} fshader.glsl)
target_deploy_file(${EXERCISENAME} shadow_map_vshader.glsl)
target_deploy_file(${EXERCISENAME} shadow_map_fshader.glsl)
target_deploy_file(${EXERCISENAME} _floor/Floor_texture.tga)
target_deploy_file(${EXERCISENAME} _tangle_cube/tangle_cube.obj)
target_deploy_file(${EXERCISENAME} ../external/AntTweakBar/lib/x64/AntTweakBar64.dll) 

